# Course-Assistant-in-cxsjsx-2025-Spring

./: 63-源代码.txt  CMakeLists.txt  Course.cpp  LICENSE  MainWindow.h  MainWindow.ui  Notification.cpp  Notification.h  README.md  ReminderDialog.ui  ScheduleManager.cpp  ScheduleManager.h  Settings.cpp  Settings.h  Task.h  TaskDialog.ui  TaskManager.cpp  main.cpp  ~$课程表助手功能文档.docx  智能课程表助手功能文档.docx
Smart Course Assistant/: CourseDialog.cpp  CourseDialog.h  CourseDialog.ui  MainWindow.cpp  ReminderDialog.cpp  ReminderDialog.h  SmartScheduleAssistant.pro  SmartScheduleAssistant.pro.user.7c21178  SmartScheduleAssistant.pro.user.da6c1ff  SmartScheduleAssistant.pro.user.fa7d00c  Task.cpp  TaskDialog.cpp  main.cpp  resources.qrc
Smart Course Assistant/resources/styles/: main_style.css
SmartScheduleAssistant/: CMakeLists.txt  Course.cpp  Course.h  CourseDialog.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  Notification.cpp  Notification.h  ScheduleManager.cpp  ScheduleManager.h  Settings.cpp  Settings.h  SmartScheduleAssistant.pro  Task.cpp  Task.h  TaskDialog.cpp  TaskDialog.h  TaskManager.cpp  TaskManager.h  TrayIcon.cpp  main.cpp  resources.qrc
SmartScheduleAssistant/resources/styles/: dark_theme.css  light_theme.css
backend/: Course.cpp  Course.h  ScheduleManager.cpp  ScheduleManager.h
frontend/: AddCourseDialog.h  AddHomeworkDialog.cpp  AddHomeworkDialog.h  MainWindow.cpp  MainWindow.h  addhomeworkdialog.ui  course-assistant.pro  course_dialog.ui  main.py  main_window.ui  mainwindow.h  mainwindow.ui
